--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 Hello World
-<!DOCTYPE html>
-<html>
-<body>
+body {
+    background-color: lightblue;
+}
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
-</html>
-
+h1 {
+    color: navy;
+    margin-left: 20px;
+}
